SM: Minor spacing fix for user controls

--- a/app/scripts/views/App/PrimaryNavigation.less
+++ b/app/scripts/views/App/PrimaryNavigation.less
@@ -78,7 +78,7 @@ nav.primary-nav {
       border-radius: 2px;
     }
 
-    .username, .fullname {
+    .username, .fullname {  //is this available?
       display: block;
       white-space: pre;
       height: 1em;
@@ -89,6 +89,7 @@ nav.primary-nav {
       font-weight: 400;
       text-transform: uppercase;
       font-size: 0.85em;
+      letter-spacing: 1px;
     }
     .fullname {
       color: @gray-lighter;
@@ -176,7 +177,7 @@ nav.primary-nav {
     background: rgba(250,250,250,0.08);
 
     & > a{
-      padding: 12px 0;
+      padding: 12px;
     }
     .dropdown-menu{
       top: -40px;
